@@ -1,3 +1,7 @@
+6/22/2004
+	- The DNSSEC digesting code shouldn't throw ClassCastExceptions.
+	  (reported by Mike StJohns <Mike.StJohns@nominum.com>)
+
 6/8/2004
 	- Rcode 4 is NOTIMP, not NOTIMPL.
 
